--- a/debian-buster/provisioning/playbook.yml
+++ b/debian-buster/provisioning/playbook.yml
@@ -1,6 +1,6 @@
 ---
 # Ansible playbook for a Docker for Mac Replacement.
-- hosts: docker
+- hosts: all
   gather_facts: yes
 
   vars_files:
@@ -8,9 +8,30 @@
 
   pre_tasks:
     - name: Update apt-get repo and cache
-      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+      apt:
+        update_cache: yes
+        force_apt_get: yes
+        cache_valid_time: 3600
       when: ansible_os_family == 'Debian'
 
   roles:
     - geerlingguy.ntp
     - geerlingguy.docker
+
+  tasks:
+    - name: Enable vsyscall emulation
+      replace:
+        dest: /etc/default/grub
+        regexp: '^(GRUB_CMDLINE_LINUX_DEFAULT=(?!.* vsyscall)\"[^\"]+)(\".*)'
+        replace: '\1 vsyscall=emulate\2'
+      notify:
+        - update grub
+
+  handlers:
+    - name: update grub
+      command: /usr/sbin/update-grub
+
+  post_tasks:
+    - name: IMPORTANT NOTICE
+      debug:
+        msg: 'To finish provisioning please run "vagrant reload"'
