--- a/centos-stream8/Vagrantfile
+++ b/centos-stream8/Vagrantfile
@@ -23,6 +23,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.hostname = "docker-centos-s8"
   config.vm.network :private_network, ip: "192.168.44.4"
+  config.vm.network "forwarded_port", guest: 2376, host: 2376
 
   config.vm.synced_folder "/Users", "/Users"
 
