--- a/debian-buster/Vagrantfile
+++ b/debian-buster/Vagrantfile
@@ -20,6 +20,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.hostname = "docker-debian-10"
   config.vm.network :private_network, ip: "192.168.33.3"
+  config.vm.network "forwarded_port", guest: 2376, host: 2376
 
   config.vm.synced_folder "/Users", "/Users"
 
